# GE-Man-Lib

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  flake.nix
src/: archive.rs  config.rs  error.rs  tag.rs
src/download/: github.rs  mod.rs  response.rs
