[package]
name = "ge-man-lib"
version = "0.1.2"
edition = "2021"
keywords = ["GloriousEgroll", "GE-Proton", "Wine-GE", "GE-Man"]
categories = ["api-bindings"]
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "Common functionality used by GE-Man."
repository = "https://github.com/Compile-Time/GE-Man"
include = [
    "**/*.rs",
    "Cargo.toml"
]

[dependencies]
reqwest = { version = "0.11.23", features = ["blocking", "json"] }
serde = { version = "1.0.194", features = ["derive"] }
serde_json = "1.0.111"
serde_yaml = "0.9.29"
ring = "0.17.7"
data-encoding = "2.5.0"
regex = "1.10.2"
lazy_static = "1.4.0"
tar = "0.4.40"
flate2 = { version = "1.0.28", features = ["zlib"], default-features = false }
xz2 = "0.1.7"
thiserror = "1.0.56"
openssl = { version = "0.10.62", optional = true }

[dev-dependencies]
test-case = "3.3.1"
httpmock = "0.6.6"
assert_fs = "1.1.0"
predicates = "3.0.4"
mockall = "0.12.1"

[features]
default = ["reqwest/default-tls"]
vendored-openssl = ["openssl/vendored"]